--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -3,13 +3,12 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Dart
-
+name: Flutter
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
