--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,8 @@ name: money
 description: Class for math with money (with decimals places).
 version: 0.9.0
 homepage: https://github.com/fregate/money
+issue_tracker: https://github.com/fregate/money/issues
+repository: https://github.com/fregate/money
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
